# ns

./: .gitignore  CLAUDE.md  Makefile  README.md
.claude/: settings.local.json
.claude/skills/: DELIVERY-SUMMARY.md  README.md  generate-skill-files.sh
.claude/skills/automating-computer-use-testing/: README.md  SKILL.md
.claude/skills/automating-computer-use-testing/examples/: example_form_automation.md  example_visual_regression.md  example_webapp_testing.md
.claude/skills/automating-computer-use-testing/reference/: best_practices.md  gemini_api_reference.md  troubleshooting.md
.claude/skills/automating-computer-use-testing/scripts/: analyze_requirements.py  validate_goal.py
.claude/skills/automating-computer-use-testing/templates/: env_template.env  goal_template.txt  harness_template.py
.claude/skills/aws-serverless-deployment/: SKILL.md
.claude/skills/claude-skill-creator/: QUICK-REFERENCE.md  SKILL.md
.claude/skills/claude-skill-creator/examples/: code-skill.md  mcp-skill.md  multi-file-skill.md  simple-skill.md
.claude/skills/financial-analytics/: SKILL.md
.claude/skills/financial-analytics/examples/: cost-analysis-cli.md  financial-dashboard.md
.claude/skills/financial-analytics/integrations/: databases.md  netsuite.md  salesforce.md
.claude/skills/netsuite-business-automation/: SKILL.md
.claude/skills/netsuite-developer/: SKILL.md  kb-reference.md
.claude/skills/netsuite-integrations/: SKILL.md
.claude/skills/python-cli-engineering/: SKILL.md
.claude/skills/react-pwa-designer/: README.md  SKILL.md  SuperDesign.md
.claude/skills/salesforce-mcp/: SKILL.md
.claude/skills/salesforce-mcp-distilled/: README.md  SKILL.md
.claude/skills/vendor-cost-analytics/: SKILL.md
apps/financial-analytics/: .env.example  .gitignore  ARCHITECTURE.md  Makefile  QUICKSTART.md  README.md  config.yaml  main.py  pyproject.toml
apps/financial-analytics/src/financial_analytics/analytics/: revenue_analysis.py  salesforce_analysis.py  vendor_analysis.py
apps/financial-analytics/src/financial_analytics/cli/: analyze.py  init.py  main.py  sync.py
apps/financial-analytics/src/financial_analytics/core/: config.py  constants.py  exceptions.py
apps/financial-analytics/src/financial_analytics/db/: models.py  session.py
apps/financial-analytics/src/financial_analytics/extractors/: netsuite_auth.py  netsuite_client.py  netsuite_models.py  netsuite_queries.py  salesforce_extractor.py
apps/vendor-analysis/: .env.example  .gitignore  Makefile  OVERVIEW.md  README.md  SCHEMA_RESILIENCE.md  config.yaml  pyproject.toml
apps/vendor-analysis/scripts/: Makefile  README.md  bootstrap.py  diagnose_auth.py  migrate_add_custom_fields.sql  migrate_incremental_sync.sql  run_migration.py
apps/vendor-analysis/src/vendor_analysis/analysis/: duplicates.py  vendors.py
apps/vendor-analysis/src/vendor_analysis/cli/: analyze.py  duplicates.py  main.py  status.py  sync.py
apps/vendor-analysis/src/vendor_analysis/core/: config.py  constants.py  exceptions.py  field_config.py
apps/vendor-analysis/src/vendor_analysis/db/: models.py  query_helpers.py  session.py
apps/vendor-analysis/src/vendor_analysis/netsuite/: auth.py  auth_base.py  auth_factory.py  auth_tba.py  client.py  field_processor.py  models.py  queries.py
kb/: authentication.md  open-source-projects.md  restlets.md  suitecloud-sdk-framework.md  suitescript-modules.md  suitetalk-rest-api.md  third-party-sdks.md
libs/logger/: README.md  pyproject.toml
libs/logger/src/libs/: __init__.py
libs/logger/src/libs/logger/: __init__.py  config.py  exceptions.py  factory.py  formatter.py  handlers.py
tmp/: COMPLETION_SUMMARY.md  INCREMENTAL_SYNC_IMPLEMENTATION.md  TESTING_RESULTS.md  execution-tracker.md  key-learnings-summary.md  skill-updates-execution-plan.md  test_incremental_sync.py  test_missing_field.py  test_suiteql.py  test_suiteql_bulk.py  test_suiteql_pagination.py  test_transaction_fields.py
(+142 files in other folders)
