[project]
name = "libs-logger"
version = "0.1.0"
description = "Shared logging library with rolling archives and custom formatting"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/libs"]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.0",
    "ruff>=0.4.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []
